ui: fixup dark mode colors

--- a/frontend/app/styles/main.css
+++ b/frontend/app/styles/main.css
@@ -294,6 +294,32 @@ svg {
     text-indent: 0;
     border-color: inherit;
     border-collapse: collapse;
+    display: block;
+    max-width: 960px;
+    overflow-x: scroll;
+}
+
+.markdown-body table::-webkit-scrollbar {
+    height: 4px;
+    background-color: var(--color-gray-lightest);
+}
+
+.markdown-body table::-webkit-scrollbar-thumb {
+    background-color: var(--color-gray-medium);
+    border-radius: 4px;
+    cursor: grab;
+}
+
+.markdown-body table::-webkit-scrollbar-thumb:hover {
+    background-color: var(--color-gray-dark);
+}
+
+.markdown-body table::-webkit-scrollbar-thumb:active {
+    background-color: var(--color-gray-darkest);
+}
+
+.markdown-body table::-webkit-scrollbar-track {
+    background-color: var(--color-gray-lightest);
 }
 
 .markdown-body dl dt {
@@ -324,11 +350,11 @@ svg {
 }
 
 .markdown-body table thead {
-  background-color: rgba(235, 235, 255, 1);
+  background-color: var(--color-blueLight);
 }
 
 .markdown-body table tbody tr {
-  background-color: rgba(250, 250, 255, 1);
+  background-color: var(--color-offWhite);
 }
 
 .markdown-body table tbody td {
@@ -340,7 +366,7 @@ svg {
 }
 
 .markdown-body table tr:nth-child(2n) {
-  background-color: rgba(235, 235, 255, 1);
+  background-color: var(--color-blueLight);
 }
 
 .markdown-body table img {
@@ -377,7 +403,7 @@ svg {
 }
 
 .markdown-body a {
-    color: #394eff;
+    color: var(--color-teal);
     text-decoration: none;
 }
 
